--- a/notify/pushbullet.yaml
+++ b/notify/pushbullet.yaml
@@ -1,4 +1,11 @@
-pushbullet:
+jhettenh_pb:
   module: pushbullet
   class: Pushbullet
   api_key: !secret jhettenh_pushbullet_key
+  endpoint: "jhettenh_pb"
+
+hassio_pb:
+  module: pushbullet
+  class: Pushbullet
+  api_key: !secret hassio_pushbullet_key
+  endpoint: "hassio_pb"
